[package]
name = "rust-sql-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.8.0"
anyhow = "1.0.86"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.3"
serde = "1.0.203"
serde_json = "1.0.117"
tiberius = "0.12.2"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
tokyo = "1.0.0"
uuid = "1.9.0"

